--- a/Notes/AppShell.xaml
+++ b/Notes/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="Notes.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Notes"
+    xmlns:Views="clr-namespace:Notes.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="Notes">
 
@@ -11,12 +11,12 @@
         
         <ShellContent
         Title="Notes"
-        ContentTemplate="{DataTemplate local:NotePage}"
+        ContentTemplate="{DataTemplate Views:AllNotesPage}"
         Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
 
         <ShellContent
         Title="About"
-        ContentTemplate="{DataTemplate local:AboutPage}"
+        ContentTemplate="{DataTemplate Views:AboutPage}"
         Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
         
     </TabBar>
